ref: used pep440 style version

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ version = 0.0.1
 
 [versioneer]
 VCS = git
-style = pep440-xzp
+style = pep440
 versionfile_source = py_handoff/_version.py
 versionfile_build = py_handoff/_version.py
 tag_prefix =
