--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ lru-dict==1.1.7
     # via -r requirements.in
 netifaces==0.11.0
     # via -r requirements.in
+pluggy==0.13.1
+    # via -r requirements.in
 pyperclip==1.8.2
     # via -r requirements.in
